# Joueur.cpp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Joueur.cpp.sln  Joueur.cpp.vcxproj  Joueur.cpp.vcxproj.filters  Makefile  README.md  README.md--  Vagrantfile  _dossier.data  anarchy_2ai_8hpp_source.html  anarchy_2game_8hpp_source.html  anarchy_2game__object_8hpp_source.html  anarchy_2player_8hpp_source.html  annotated.html  annotated.js  arenaRun  base__ai_8hpp_source.html  base__object_8hpp_source.html  beaver_8hpp_source.html  body_8hpp_source.html  bomb_8hpp_source.html  bottle_8hpp_source.html  brood__mother_8hpp_source.html  building_8hpp_source.html  catastrophe_2ai_8hpp_source.html  catastrophe_2game_8hpp_source.html  catastrophe_2game__object_8hpp_source.html  catastrophe_2job_8hpp_source.html  catastrophe_2player_8hpp_source.html  catastrophe_2tile_8hpp_source.html  catastrophe_2unit_8hpp_source.html  checker_8hpp_source.html  checkers_2ai_8hpp_source.html  checkers_2game_8hpp_source.html  (+487 more)
games/: CMakeLists.txt
games/anarchy/: CMakeLists.txt  ai.cpp  ai.h  ai.hpp  anarchy.h  building.cpp  building.h  building.hpp  fireDepartment.cpp  fireDepartment.h  fire_department.cpp  fire_department.hpp  forecast.cpp  forecast.h  forecast.hpp  game.cpp  game.h  game.hpp  gameManager.cpp  gameManager.h  gameObject.cpp  gameObject.h  game_object.cpp  game_object.hpp  player.cpp  player.h  player.hpp  policeDepartment.cpp  policeDepartment.h  police_department.cpp  police_department.hpp  registry.h  warehouse.cpp  warehouse.h  warehouse.hpp  weatherStation.cpp  weatherStation.h  weather_station.cpp  weather_station.hpp
games/catastrophe/: CMakeLists.txt  ai.cpp  ai.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  job.cpp  job.hpp  player.cpp  player.hpp  structure.cpp  structure.hpp  tile.cpp  tile.hpp  unit.cpp  unit.hpp
games/checkers/: CMakeLists.txt  ai.cpp  ai.h  ai.hpp  checker.cpp  checker.h  checker.hpp  checkers.h  game.cpp  game.h  game.hpp  gameManager.cpp  gameManager.h  gameObject.cpp  gameObject.h  game_object.cpp  game_object.hpp  player.cpp  player.h  player.hpp  registry.h
games/checkers - Copy/: ai.h  checkers.h  game.cpp  game.h
games/chess/: CMakeLists.txt  ai.cpp  ai.h  ai.hpp  chess.h  game.cpp  game.h  game.hpp  gameManager.cpp  gameManager.h  gameObject.cpp  gameObject.h  game_object.cpp  game_object.hpp  move.cpp  move.h  (+8 more)
(+568 files in other folders)
